<resources>
    <string name="app_name">BasicBankingApp</string>
    <string name="dipesh_vaghela">KIRANKUMAR VAGHELA</string>
    <string name="created_by">Created by</string>
    <string name="home_page">HOME PAGE</string>
    <string name="view_all_customer">All Customer</string>
    <string name="balance">Balance :</string>
    <string name="text_balance">Current Balance :</string>
    <string name="customer_information">Customer Information</string>
    <string name="fatch_here">Fetch here</string>
    <string name="customer_name">Customer Name :</string>
    <string name="bank_name">Bank Name :</string>
    <string name="branch_name">Branch Name :</string>
    <string name="type">Account Type :</string>
    <string name="customer_id">Customer ID :</string>
    <string name="transfer_to">Transfer To...</string>
    <string name="transfer">Transfer</string>
    <string name="from">From</string>
    <string name="ammount">Amount</string>
    <string name="enter_ammount">Enter Amount</string>
    <string name="account_number">Account Number :</string>
    <string name="ifsc_code">IFSC Code :</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="pay">Pay</string>
    <string name="press_back_button_to_return">Press BACK button to return</string>
    <string name="basic">Basic</string>
    <string name="banking">Banking</string>
    <string name="view_transaction_history">View Transaction History</string>
    <string name="amount_1">Amount :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="accno">AccNo : </string>
    <string name="transaction_history">Transaction History</string>
    <string name="no_transaction_yet">No Transaction Yet</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="app">App</string>
    <string name="x">X</string>
    <string name="state_bank_of_india">State Bank of India</string>
    <string name="contact_number">Contact Number :</string>
    <string name="e_mail">E-mail :</string>
    <string name="list_of_all_customer">List of All Customer</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transection_successful">Transaction Successful</string>
    <string name="developed_by">Developed By</string>
    <string name="kirankumar_vaghela">Kirankumar Vaghela</string>
</resources>