<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/common_gradient">

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:text="@string/to"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:text="@string/basic"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="165dp"
            />
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:text="@string/banking"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:text="@string/app"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_below="@id/tvTitle2"
            />




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/blue"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="7dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="120dp"
            android:layout_alignParentBottom="true"
            android:onClick="viewAllCustomer">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/view_all_customer"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/blue"
            card_view:cardCornerRadius="10dp"
            android:layout_alignParentBottom="true"
            card_view:cardElevation="7dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="viewAllHistory">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/transaction_history"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>



</RelativeLayout>