<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferResult"
    android:background="@color/lightBlue"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/common_gradient">

        <TextView
            android:id="@+id/tvtransferResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/transaction_result"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvtext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:gravity="center_horizontal"
            android:text="@string/transection_successful"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <LinearLayout
            android:id="@+id/llforTran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@id/tvtext1"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt"
                android:gravity="center_horizontal"
                android:text="@string/transaction_id"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tvResult"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt"
                android:gravity="center_horizontal"
                android:text="@string/fatch_here"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="10dp"
            android:layout_alignParentBottom="true"
            card_view:cardElevation="7dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="120dp"
            android:onClick="viewAllHistory">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/transaction_history"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="10dp"
            android:layout_alignParentBottom="true"
            card_view:cardElevation="7dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:onClick="viewAllCustomer">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/view_all_customer"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>





</RelativeLayout>