<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/prompt"
            android:text="@string/transaction_id"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTranId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"

            android:fontFamily="@font/prompt"
            android:text="@string/fatch_here"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/prompt"
            android:text="@string/amount_1"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:textStyle="bold"
            android:fontFamily="@font/prompt"
            android:textColor="@color/green"
            android:gravity="end"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/prompt"
            android:text="@string/date"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:textStyle="bold"
            android:fontFamily="@font/prompt"
            android:textColor="@color/black"

            android:gravity="end"
            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:fontFamily="@font/prompt"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:textStyle="bold"
            android:fontFamily="@font/prompt"
            android:textColor="@color/black"

            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/prompt"
            android:text="@string/from"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textStyle="bold"
            android:gravity="end"

            android:fontFamily="@font/prompt"
            android:textColor="@color/blue"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSenName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/prompt"
            android:text="@string/fatch_here"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvRevName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:textStyle="bold"
            android:gravity="end"

            android:fontFamily="@font/prompt"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSenBank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/prompt"
            android:text="@string/fatch_here"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvRevBank"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:gravity="end"
            android:textStyle="bold"

            android:fontFamily="@font/prompt"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/prompt"
            android:text="@string/accno"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tvSenAccno"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:textStyle="bold"
            android:fontFamily="@font/prompt"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tvRevAccno"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/fatch_here"
            android:textStyle="bold"
            android:gravity="end"

            android:fontFamily="@font/prompt"
            android:textColor="@color/black"
            />

    </LinearLayout>


</LinearLayout>