<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">

        <!-- Main Vertical layout -->

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/layout_left"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:background="@drawable/one_letter"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvFirstLetterOfName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/prompt"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_right"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/tvCusName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/prompt"
                    android:gravity="center_horizontal"
                    android:text="@string/dipesh_vaghela"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvBankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_bank_of_india"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/prompt"/>
                <TextView
                    android:id="@+id/tvBranchName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fatch_here"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/prompt"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvBalText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textSize="15sp"
                        android:fontFamily="@font/prompt"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/tvBal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/fatch_here"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:fontFamily="@font/prompt"
                        android:textColor="@color/blue" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>